# servicenow-devtools-mcp

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: sonarqube_mcp.instructions.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml  stale.yml
openapi-specs/: mid_gliderecord_rest_service_latest_spec.yaml  now_ace_contents_latest_spec.yaml  now_activitysubscriptions_latest_spec.yaml  now_advance_chat_settings_latest_spec.yaml  now_agent_initiated_message_latest_spec.yaml  now_aggregate_api_latest_spec.yaml  now_ai_search_assist_(internal_api)_latest_spec.yaml  now_ai_search_assist_action_(internal_api)_latest_spec.yaml  now_application_service_internal_api_latest_spec.yaml  now_application_service_latest_spec.yaml  now_application_service_utils_api_latest_spec.yaml  now_atf_agent_latest_spec.yaml  now_attachment_api_latest_spec.yaml  now_branding_latest_spec.yaml  now_change_request_calendar_(internal_api)_latest_spec.yaml  now_check_plugin_installation_latest_spec.yaml  now_ci_lifecycle_management_api_latest_spec.yaml  now_ci_lifecycle_manager_latest_spec.yaml  now_client_extension_point_service_latest_spec.yaml  now_clone_auth_api_latest_spec.yaml  now_clone_request_calendar_latest_spec.yaml  now_cmdb_data_ingestion_api_latest_spec.yaml  now_cmdb_instance_api_latest_spec.yaml  now_cmdb_meta_api_latest_spec.yaml  now_cmdb_ui_api_(internal_api)_latest_spec.yaml  now_cmdb_workspace_api_latest_spec.yaml  now_collaboration_chat_teams_processor_latest_spec.yaml  now_contextdocurlservice_v1_spec.yaml  now_contextual_search_(internal_api)_latest_spec.yaml  now_contextual_search_actions_(internal_api)_latest_spec.yaml  now_conversation_consumer_account_v1_spec.yaml  now_conversation_member_api_latest_spec.yaml  now_conversation_message_resource_latest_spec.yaml  now_conversation_server_preview_latest_spec.yaml  now_copy_assessments_latest_spec.yaml  now_csdm_application_service_(internal_api)_latest_spec.yaml  now_csm_attachment_api_v1_spec.yaml  now_data_classification_latest_spec.yaml  now_documents_generation_api_latest_spec.yaml  now_email_api_v1_spec.yaml  (+119 more)
scripts/: smoke_test.py
src/servicenow_mcp/: auth.py  (+13 more)
tests/: __init__.py  conftest.py  helpers.py  test_artifact_write.py  test_attachment.py  test_auth.py  test_changes.py  test_choices.py  test_client.py  test_config.py  test_debug.py  test_decorators.py  test_dev_utils.py  test_developer.py  test_documentation.py  test_flow_designer.py  test_introspection.py  test_investigation_helpers.py  test_investigations.py  test_metadata.py  test_packages.py  test_policy.py  test_record.py  test_record_write.py  test_relationships.py  test_sentry.py  test_server.py  test_state.py  test_table.py  test_testing.py  test_utility.py  test_utils.py  test_workflow.py
(+70 files in other folders)
